[WIP][POC][FIX] web: rename name $yiq-contrasted-threshold -> $min-contrast-ratio
TODO
FIXME logic not identical in BS4 -> BS5 => $threshold is not correct

--- a/addons/web/static/src/legacy/scss/bs_mixins_overrides.scss
+++ b/addons/web/static/src/legacy/scss/bs_mixins_overrides.scss
@@ -10,7 +10,8 @@ $enable-deprecation-messages: false !default;
 // Override color-yiq function to handle the alpha component of colors and
 // automatic threshold
 @function color-yiq($color, $dark: $color-contrast-dark, $light: $color-contrast-light, $background: $body-bg, $cross-mix: true) {
-    $threshold: if($yiq-contrasted-threshold != false, $yiq-contrasted-threshold / 255 * 100%, false);
+    // FIXME: logic not identical in BS4 -> BS5 => $threshold is not correct
+    $threshold: if($min-contrast-ratio != false, $min-contrast-ratio / 7 * 100%, false);
     @return o-get-most-contrast($color, $light, $dark, $background, $threshold, $cross-mix);
 }
 
